fixed the sidenav height on mobile view

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -84,7 +84,7 @@
         left: -100%;
         top: auto;
         width: 75vw;
-        height: -webkit-fill-available;
+        height: calc(100vh - 4rem);
         transition: all 1s ease;
     }
 
