--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -2,6 +2,7 @@
     position: sticky;
     top: 0;
     z-index: 1000;
+    height: 4rem;
     padding: 0.8rem 4rem;
     background-color: var(--light-color);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
